--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,28 @@
-# Installe java 8 sur l'agent
-- name: Set up JDK 8
-  uses: actions/setup-java@v2
-  with:
-    java-version: '8'
-    distribution: 'adopt'
+name: CI/CD Pipeline
 
-# Compile notre application
-- name: Build with Maven
-  run: mvn --batch-mode --update-snapshots package
-# Publie les résultats de test
-- name: Publish Unit Test Results
-  uses: EnricoMi/publish-unit-test-result-action@v1
-  if: always()
-  with:
-    files: target/**/*.xml
+on:
+  push:
+    branches: [main]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: target/**/*.xml
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: my-app-1.0
+          path: target/*.jar
