--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,11 @@ jobs:
         with:
           name: my-app-1.0
           path: target/*.jar
+      - name: Install Docker
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+      - name: Docker build
+        run: |
+          docker build .
