--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
 
+      - name: Checkout
+        run: ls
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
 
