--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [mai, feature/*]
 
 jobs:
   build:
@@ -17,7 +17,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
-        working-directory: /home/runner/work/lab-git-ci-gabchx
 
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
