--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+      - name: Standard Checkout
+        uses: actions/checkout@v2
 
       - name: Build with Maven
         shell: bash
