--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,12 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: read
+      issues: read
+      checks: write
+      pull-requests: write
+
     runs-on: ubuntu-latest
 
     steps:
@@ -14,6 +20,7 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+
       - name: Standard Checkout
         uses: actions/checkout@v2
 
@@ -26,6 +33,7 @@ jobs:
         if: always()
         with:
           files: target/**/*.xml
+
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
